<resources>
    <string name="app_name">auth</string>

    <string name="e_mail_text">e-mail</string>
    <string name="example_email_hint_text">example@example.ru</string>
    <string name="password_field">Пароль</string>
    <string name="hint_password">******</string>
    <string name="sing_in_text_btn">ВОЙТИ</string>
    <string name="text_to_registration">Регистрация</string>
    <string name="repeat_password_field">Повторите пароль</string>
    <string name="btn_text_registration">РЕГИСТРАЦИЯ</string>
    <string name="text_to_autorization">Авторизоваться</string>
</resources>