<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".view.SingInFragment">


    <TextView
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_text" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/StyleFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/btn_fields"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_email_hint_text"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/btn_fields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_field" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/StyleFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/btn_fields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password_field" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/StyleFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/btn_fields" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sing_out"
        style="@style/BtnSingInSingOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_registration" />

    <TextView
        android:id="@+id/toAutorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:textStyle="italic"
        android:text="@string/text_to_autorization"
        />





</androidx.appcompat.widget.LinearLayoutCompat></ScrollView>